# Vector-Embeddings

./: main.py  pyproject.toml
Simple embeddings/: first_embeddings.ipynb  walter_white_yo.txt
Simple embeddings/online_db/: index.faiss  index.pkl
Simple embeddings/pdf_vector_db/: index.faiss  index.pkl
Simple embeddings/vector_store_db/: index.faiss  index.pkl
vector_store_db/: index.faiss  index.pkl
